--- a/eurosong-festival/src/scss/style.scss
+++ b/eurosong-festival/src/scss/style.scss
@@ -1,31 +1,22 @@
-$prim-blue: rgba(16,14,74,1);
-$prim-white: white;
-$prim-pink: pink;
-$prim-grey:rgba(255,255,255,0.9);
-$prim-black: black;
-
-$font-size-large: 32px;
-$font-size-medium: 24px;
-$font-size-small: 18px;
-body{
-    background-color: $prim-blue;
-    color: $prim-white;
-
-    margin: 0;
-}
+@import "./settings/colors.scss";
+@import "./settings/sizes.scss";
+@import "./Components/body.scss";
 
 h1,h2{
     color: $prim-pink;
 }
 
-//nav component
-.c-nav{
-    background-color: $prim-grey;
-    color: $prim-black;
+@import "./Components/nav.scss";
+/* %banner{
+    background-color: red;
+    color: black;
+    padding: 20px;
 }
 
-.c-nav-list{
-    list-style-type: disc;
-
-    display: flex;
+#banner1{
+    @extend banner;
 }
+
+#banner2{
+
+} */
