--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,4 +6,5 @@
 @import "./components/body.scss";
 @import "./components/feedback.scss";
 @import "./components/nav.scss";
+@import "./components/table.scss";
 
